# Quadstar

./: .gitignore  LICENSE  README.md  config.py  joystick.py  pyenv.sh  pyproject.toml  quad.py  quadcontroller.py  quadend2end.py  quadendezuende.py  quadlive.py  quadpid.py  quadregler.py  quadserial.py  quadseriell.py  quadtest.py  quadtrain.py  quaternion.py  requirements.txt  start.sh  test.sh  wind.py
doc/: README.md
doc/architecture/: main.fdb_latexmk  main.fls  main.tex
docs/architecture/: main.fdb_latexmk  main.fls  main.tex
images/: Quellen.txt  generator.graphml
models/: config.db
models/QM-02-09-24-EIPC54-B/: config.py
models/QM-02-09-24-EIPC54-D/: config.py
models/QM-02-09-24-EIPC54-E/: config.py
models/QM-02-09-24-EIPC54-F/: config.py
models/QM-02-09-24-EIPC54-G/: config.py
models/QM-02-09-24-EIPC54-H/: config.py
models/QM-02-09-24-EIPC54-I/: config.py
models/QM-04-09-24-EIPC53-A/: config.py
models/QM-04-09-24-EIPC53-B/: config.py
models/QM-04-09-24-EIPC53-C/: config.py
models/QM-06-09-24-EIPC53-A/: config.py
quadserver/: manage.py
quadsoft/: .cproject  .project  BG431B.stmcx  Motor profiling.txt  STM32F411RETX_FLASH.ld  Sensorfusion (1).launch  Sensorfusion.launch  nucleo_f411re.overlay
report/: Bachelorarbeit.fdb_latexmk  Bericht.aux  Bericht.fdb_latexmk  Bericht.fls  Bericht.out  Bericht.tex  Bericht.toc
scripts/: plot_buttons.py
src/: config.py  joystick.py  quadend2end.py  quadlive.py  quadserial.py  quadtest.py  template_config.py
templates/: sensortest.html
utils/: animation.py  display.py
(+1407 files in other folders)
