[tool.poetry]
name = "thetafly"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.24.4"
pygame = "^2.6.1"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
fastapi = "^0.120.1"
flask = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
